# lab02sukhov

./: CMakeLists.txt
include/: 16g.h
include/src/: 16g.cpp
src/: 16g.cpp  main.cpp
test/: tests.cpp
